<resources>
    <string name="app_name" translatable="false">Equiv</string>

    <string name="activity_title_add_product">Add product</string>

    <string name="action_settings">Settings</string>
    <string name="action_new_day">New day</string>

    <string name="meal_name_breakfast">B.fast</string>
    <string name="meal_name_lunch">Lunch</string>
    <string name="meal_name_snack">Snack</string>
    <string name="meal_name_dinner">Dinner</string>
    <string name="add_meal_item_button">Add</string>
    <string name="start_new_day">Discard all meals?</string>
    <string name="start_new_day_button">Discard all</string>
    <string name="action_save">Save</string>
    <string name="edit_meal_item_title">Edit product</string>
    <string name="add_meal_item_tab_all">All</string>
    <string name="add_meal_item_tab_favorites">Favorites</string>
    <string name="action_remove">Remove</string>
    <string name="action_delete">Delete</string>
    <string name="dialog_delete_product_in_use">This product is in use in your meals. Deleting it is going to remove it from these meals. Remove it neverless?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="max_protein_per_day_title">Max protein per day</string>
    <string name="weight_unit">g</string>
    <string name="protein_weight_unit">g P</string>
    <string name="potato_weight_unit">g PTT</string>
    <string name="protein_weight_unit_default" translatable="false">POTATO</string>
    <string name="protein_weight_unit_title">Reference unit</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About Equiv</string>
    <string name="title_activity_add_custom_product">Add custom product</string>
    <string name="title_activity_edit_custom_product">Edit custom product</string>

    <string name="about_description">Track your protein consumption during the day.\n

        \nThis app is primarily designed for people suffering from
        Phenylketonuria.\n

        \nDisclaimer: Equiv comes without any warranty and should not be used as
        medical advice. Use it with discernment.\n

        \nThe product list is currently only in French and based on products
        available in France. If you are interested in contributing a product
        list for your country, contact me: <a href="mailto:{email}">{email}</a>.\n

        \nEquiv is licensed under the <a href="{license_url}">Apache 2.0</a> license.\n

        \nYou can fork the project on <a href="{github_url}">GitHub</a>.
    </string>

    <string name="about_author">By Aurélien Gâteau</string>
    <string name="max_potato_per_day_title">Max potatoes per day</string>
    <string name="action_search">Search</string>
    <string name="action_add_custom">Add custom product</string>
    <string name="action_share">Share custom products</string>

    <string name="product_category">Category</string>
    <string name="product_name">Name</string>
    <string name="product_proteins">Proteins</string>
    <string name="product_unit">Unit</string>
    <string name="unit_per_u">g per unit</string>
    <string name="unit_per_100g">g per 100g</string>
    <string name="share_via">Share via</string>
    <string name="share_email_subject">Equiv product list</string>
    <string name="no_custom_products">No custom products to share</string>
    <string name="dialog_share_custom_products">You added or modified some products in Equiv. Do you want to share them with us
        so that we can include them in the next version?\n\nIf you continue an email containing your changes is going to be created.
    </string>
    <string name="dialog_share_custom_products_confirm">Share</string>
    <string name="dialog_edit_default_product">You are about to customize a product from Equiv default product list.\n
        \nAre you sure you want to do this?
    </string>
    <string name="dialog_continue">Continue</string>
    <string name="default_product_modified">You have modified Equiv definition of this product. If there is an error in Equiv, you can share your changes with us so that they are included in the next version.\n\nYour changes:</string>
    <string name="default_product_property_change">%1$s: from %2$s to %3$s</string>

    <string name="categories_baking_mixes">Baking mixes</string>
    <string name="categories_cereals">Cereals</string>
    <string name="categories_chocolates">Chocolates</string>
    <string name="categories_dairy_products">Dairy products</string>
    <string name="categories_meat_fish_eggs">Meat / fish / eggs</string>
    <string name="categories_pastries">Pastries</string>
    <string name="categories_salted_biscuits">Salted biscuits</string>
    <string name="categories_starch">Starch</string>
</resources>
