<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_remove"
        android:title="@string/action_remove"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_custom"
        android:title="@string/action_add_custom"
        app:showAsAction="always" />
</menu>
