<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.agateau.equiv.ui.CustomProductFragment">

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect"
        android:hint="@string/product_name"
        android:imeOptions="actionNext"/>

    <Spinner
        android:id="@+id/product_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/product_proteins"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/product_proteins"
            android:imeOptions="actionDone"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_unit_per_u"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_per_u"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/radio_unit_per_100g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_per_100g"/>
        </RadioGroup>
    </LinearLayout>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel_action"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Cancel"/>
        <Button
            android:id="@+id/add_custom_product_action"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Add"/>
    </LinearLayout>
</LinearLayout>
