<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="com.agateau.equiv.ui.CustomProductActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect"
            android:hint="@string/product_name"
            android:imeOptions="actionNext" android:layout_alignParentTop="true"
            android:layout_marginTop="32dp" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:id="@+id/product_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/product_name"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_below="@+id/product_proteins"
            android:layout_alignParentEnd="false" android:layout_alignParentStart="true">
            <RadioButton
                android:id="@+id/radio_unit_per_u"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_per_u"
                android:checked="true" />
            <RadioButton
                android:id="@+id/radio_unit_per_100g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_per_100g" android:layout_marginLeft="16dp" />
        </RadioGroup>
        <EditText
            android:id="@+id/product_proteins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/product_proteins"
            android:imeOptions="actionDone" android:layout_below="@+id/product_category"
            android:layout_marginTop="32dp"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
